<?xml version="1.0"?>
<package format="3">
  <name>tcan_bridge</name>
  <version>0.0.0</version>
  <description>A node forwards CAN messages to ROS1 messages and vice versa</description>
  <maintainer email="simon.kerscher@mavt.ethz.ch">Simon Kerscher</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>

  <depend>message_logger</depend>
  <depend>tcan_can</depend>
  <depend>tcan_bridge_msgs</depend>
</package>
