<?xml version="1.0"?>
<package format="2">
  <name>tcan_can_j1939</name>
  <version>0.0.0</version>
  <description>J1939 CAN devices</description>
  <maintainer email="simon.kerscher@mavt.ethz.ch">Simon Kerscher</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>tcan_can</depend>
  <test_depend>gtest</test_depend>
</package>
