<?xml version="1.0"?>
<package format="2">
  <name>tcan_ethercat</name>
  <version>0.2.0</version>
  <description>The tcan_ethercat package</description>
  <maintainer email="simon.kerscher@mavt.ethz.ch">Simon Kerscher</maintainer>
  <license>MIT</license>
  <author email="pleemann@ethz.ch">Philipp Leemann</author>
  <author email="diethelm@mavt.ethz.ch">Remo Diethelm</author>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>soem_rsl</depend>
  <depend>tcan</depend>
</package>
