<?xml version="1.0"?>
<package format="2">
  <name>tcan_example</name>
  <version>0.0.2</version>
  <description>The tcan_example package</description>

  <maintainer email="pleemann@ethz.ch">Philipp Leemann</maintainer>
  <license>Proprietary</license>
  <!-- <url type="website">http://wiki.ros.org/tcan_example</url> -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <buildtool_depend>catkin</buildtool_depend>

  <depend>tcan</depend>
  <depend>tcan_can</depend>
  <depend>tcan_ip</depend>
  <depend>tcan_usb</depend>

  <export>
  </export>
</package>
