<?xml version="1.0"?>
<package format="2">
  <name>tcan_example</name>
  <version>0.2.0</version>
  <description>The tcan_example package</description>

  <maintainer email="simon.kerscher@mavt.ethz.ch">Simon Kerscher</maintainer>
  <author email="pleemann@ethz.ch">Philipp Leemann</author>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>tcan</depend>
  <depend>tcan_can</depend>
  <depend>tcan_ip</depend>
  <depend>tcan_usb</depend>

  <export>
  </export>
</package>
