<?xml version='1.0' encoding='utf-8'?>
<package format="2">
  <name>tcan_example</name>
  <version>0.2.0</version>
  <description>The tcan_example package</description>

  <maintainer email="simon.kerscher@mavt.ethz.ch">Simon Kerscher</maintainer>
  <author email="pleemann@ethz.ch">Philipp Leemann</author>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>tcan</depend>
  <depend>tcan_can</depend>
  <depend>tcan_ip</depend>
  <depend>tcan_usb</depend>

  <export>
  <build_type>ament_cmake</build_type>
  </export>
    </package>
