<?xml version="1.0"?>
<package format="2">
  <name>tcan_ip</name>
  <version>0.1.0</version>
  <description>The tcan IP package</description>
  <maintainer email="pleemann@ethz.ch">Philipp Leemann</maintainer>
  <license>Proprietary</license>
  <author email="pleemann@ethz.ch">Philipp Leemann</author>
  <author email="gehrinch@ethz.ch">Christian Gehring</author>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>message_logger</depend>
  <depend>tcan</depend>
</package>
